# allen-neuro-mcp

./: .gitignore  README.md  pyproject.toml
scripts/: smoke_generate_neuron_project.py
src/allen_neuro_mcp/: __main__.py  cache.py  errors.py  schemas.py  server.py
src/allen_neuro_mcp/clients/: __init__.py  base.py  sdk.py
src/allen_neuro_mcp/morphology/: __init__.py  summary.py  swc.py
src/allen_neuro_mcp/services/: __init__.py  cells.py  simulators.py
src/allen_neuro_mcp/simulators/: __init__.py  base.py  neuron.py
src/allen_neuro_mcp/tools/: __init__.py  cells.py  simulators.py
tests/: conftest.py  test_cache.py  test_cells.py  test_morphology_summary.py  test_neuron_project_builder.py  test_schemas.py  test_sdk_client.py  test_server.py  test_simulator_base.py  test_simulator_tools.py  test_simulator_workflow_service.py  test_swc.py
tests/fixtures/: simple.swc
